--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,15 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>PlacesServlet</servlet-name>
+    <servlet-class>ru.job4j.cinema.servlet.HallServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PlacesServlet</servlet-name>
+    <url-pattern>/places</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 </web-app>
