--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
       <version>2.0.9</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.opentable.components</groupId>
+      <artifactId>otj-pg-embedded</artifactId>
+      <version>0.13.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
