--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>PlacesServlet</servlet-name>
-    <url-pattern>/places</url-pattern>
+    <url-pattern>/orders</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
